--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
       "idf.port": "/dev/tty.usbmodem14501",
-      "idf.flashType": "UART"
+      "idf.flashType": "UART",
+      "C_Cpp.default.compilerPath": "/usr/bin/clang"
 }
