--- a/main/idf_component.yml
+++ b/main/idf_component.yml
@@ -4,11 +4,11 @@ dependencies:
     # button component not compatible with 4.0.0
     # fixed in https://github.com/espressif/esp-bsp/commit/f05983f11fc329580b3e57aefa1f4491ca78b62e
     # not released yet so get latest
-    git: https://github.com/espressif/esp-bsp.git
-    path: components/esp_lvgl_port
+    # git: https://github.com/espressif/esp-bsp.git
+    # path: components/esp_lvgl_port
     # version: 8917b345af1533a2dfe2a67b7420f12a4016f389 # last tested version
-#    version: ">=2.4.4"
-    pre_release: true
+        version: ">=2.4.4"
+    # pre_release: true
   lvgl/lvgl:
     version: "^9"
     public: true
